--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -64,7 +64,7 @@
 .bg-blob.bb2 {
   width: 250px;
   height: 250px;
-  background: #3a9e8a;
+  background: #3b82f6;
   bottom: 15%;
   right: -40px;
 }
